--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!--                </div>-->
             </div>
             <div class="atoll">
-                <h2>АТОЛ Drive Smart</h2>
+                <h2 class="animation-title _anim-items">АТОЛ Drive Smart</h2>
                 <div class="atoll__content">
                     <div class="atoll__img animation-atoll-img _anim-items">
                         <img class="atoll__unhover" src="./img/atoll1.png" alt="">
@@ -73,7 +73,7 @@
                 <button class="call  animation-btn _anim-items">Оставить заявку</button>
             </div>
             <div class="replacement">
-                <h2>Замена блока СКЗИ</h2>
+                <h2 class="animation-title _anim-items">Замена блока СКЗИ</h2>
                 <div class="replacement__content">
                     <div class="replacement__text">
                         <p class="animation-atoll__text-one _anim-items">Замена блока СКЗИ необходимо проводить 1 раз в 3 года. Срок действия в 3 (три) года прописан в инструкции к блоку СКЗИ, которая также размещена на официальном сайте производителя блока СКЗИ.</p>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="contacts animation-contacts _anim-items">
-                <h2>Мы рядом</h2>
+                <h2 class="animation-title _anim-items">Мы рядом</h2>
                 <div class="contacts__content">
                     <div class="contacts__map">
                         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A65c4f8b780fbf9102578f236b6d3353162a73600b2ba3492eb7e7feb65e1265a&amp;source=constructor" width="808" height="485" frameborder="0"></iframe>
