--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/null.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/null.css">
     <title>Тахографы</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="wrapper__bg"></div>
     <div class="container__bg"></div>
     <div class="header">
-        <div class="header__logo"><a href=""><img src="./img/logo_sotrans.svg" alt=""></a></div>
+        <div class="header__logo"><a href=""><img src="../img/logo_sotrans.svg" alt=""></a></div>
         <div class="header__contacts">
             <a href="tel:+78124954320">8 (812) 495 43 20</a>
             <a href="mailto:tahograf@sotrans.ru">tahograf@sotrans.ru</a>
@@ -165,7 +165,7 @@
         </div>
     </div>
 </div>
-<script src="js/index.js"></script>
+<script src="../js/index.js"></script>
 </body>
 </html>
 
