--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="./img/banner_bg.png" alt="">
         </div>
         <div class="header">
-            <div class="header__logo"><a href=""><img src="./img/logo_sotrans.svg" alt=""></a></div>
+            <div class="header__logo"><a href="https://tacho.sotrans.ru/"><img src="./img/logo_sotrans.svg" alt=""></a></div>
             <div class="header__contacts">
                 <a href="tel:+78124954320">8 (812) 495 43 20</a>
                 <a href="mailto:tahograf@sotrans.ru">tahograf@sotrans.ru</a>
